Revision history for Perl extension Module::Build.

0.35_06 - 

 Enhancements:

 - Added experimental inc/ bundling; see Module::Build::Bundling for
   details.  [David Golden and Eric Wilhelm]

 - Clarified that 'apache' in the license attribute indicates the Apache
   License 2.0 and added 'apache_1_1' for the older version of the license
   (RT#50614) [David Golden]

 Bug fixes:

 - Made MYMETA generation non-fatal if fields required for META.yml 
   are missing [David Golden]

 - Won't die if installed Pod::Readme is broken [David Golden]
 
 Other:

 - Fixed Module::Build::Notes POD [David Golden]

 - Some commands had become silent by default, so added a few short status
   messages so users know something actually happened [David Golden]

 - Cleaned up Changes file formatting [David Golden]

 - Removed most PERL_CORE customizations from test files due to
   reorganization of dual-life modules in core (RT#49522) [David Golden]

0.35_05 - Wed Oct 28 17:20:59 EDT 2009

 Bug fixes:

 - Fix test failure in t/actions/installdeps.t when $^X is not the default
   perl [David Golden]

 - Work around $VERSION numbers in ActiveState with multiple underscores
   that prevent Module::Build from installing on Win32 [David Golden]

 - Fix bug cleaning compatibility Makefile when older ExtUtils::Manifest is
   installed [David Golden with help from David Cantrell]

 Other:

 - Suppressed more warnings from tests [David Golden]

 - Add provisional support for 'package NAME VERSION' syntax added in
   Perl 5.11.1 [David Golden]

0.35_04 - Fri Oct 23 11:20:41 EDT 2009

 Bug fixes:

 - Fix test failure if IPC::Cmd isn't installed [David Golden]

 Other:

 - Suppressed warning messages from various tests [David Golden]

0.35_03 - Wed Oct 21 21:20:59 EDT 2009

 *** API CHANGE ***

 - The prepare_metadata() method used to take a YAML::Node object as an
   argument for modification.  The method now takes no arguments and just
   returns a hash reference of metadata. [David Golden]
